# global-shark-attack-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
.sdk/def/: global-shark-attack_0.1.0.json
.sdk/model/: sdk.aontu  sdk.json  sdk.jsonic
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  global-shark-attack.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
go/core/: config.go  context.go  global-shark-attack_sdk.go  helpers.go  operation.go  registry.go  response.go  result.go  target.go  types.go
go/entity/: analyze_entity.go  download_entity.go  search_entity.go  types.go
go/feature/: audit_feature.go  base_feature.go  cache_feature.go  clienttrack_feature.go  debug_feature.go  idempotency_feature.go  log_feature.go  metrics_feature.go  netsim_feature.go  paging_feature.go  proxy_feature.go  ratelimit_feature.go  rbac_feature.go  retry_feature.go  streaming_feature.go  telemetry_feature.go  test_feature.go  timeout_feature.go
go/test/: analyze_direct_test.go  analyze_entity_test.go  custom_utility_test.go  download_direct_test.go  download_entity_test.go  exists_test.go  feature_test.go  netsim_test.go  pipeline_test.go  primary_utility_test.go  readme_examples_test.go  runner_test.go  search_direct_test.go  search_entity_test.go  struct_runner_test.go  struct_utility_test.go
go/utility/: clean.go  (+29 more)
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  global-shark-attack.rockspec  global-shark-attack_sdk.lua  global-shark-attack_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  features.php  globalsharkattack_sdk.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  globalsharkattack_sdk.py  globalsharkattack_types.py  pyproject.toml
py/core/: control.py  error.py  helpers.py  response.py  spec.py  utility_type.py
py/entity/: analyze_entity.py  download_entity.py  search_entity.py
py/feature/: audit_feature.py  log_feature.py  netsim_feature.py  paging_feature.py  proxy_feature.py  rbac_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_analyze_direct.py  test_analyze_entity.py  test_download_direct.py  test_download_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_search_direct.py  test_search_entity.py
py/utility/: clean.py  done.py  feature_add.py  feature_hook.py  feature_init.py  fetcher.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  prepare_body.py  prepare_method.py  prepare_params.py  result_basic.py  result_body.py  result_headers.py  transform_request.py  transform_response.py
rb/: AGENTS.md  CLAUDE.md  GlobalSharkAttack_sdk.gemspec  GlobalSharkAttack_sdk.rb  GlobalSharkAttack_types.rb  README.md  REFERENCE.md  config.rb  features.rb
ts/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  package-lock.json  package.json
(+344 files in other folders)
